; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_usrmarshal.c_interface_variant_unmarshal.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_usrmarshal.c_interface_variant_unmarshal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [32 x i8] c"pFlags=%d, Buffer=%p, ppUnk=%p\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*, i32, i32**)* @interface_variant_unmarshal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @interface_variant_unmarshal(i32* %0, i8* %1, i32 %2, i32** %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32**, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32** %3, i32*** %9, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** %7, align 8
  %14 = load i32**, i32*** %9, align 8
  %15 = call i32 @TRACE(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %12, i8* %13, i32** %14)
  %16 = load i8*, i8** %7, align 8
  %17 = bitcast i8* %16 to i32*
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %10, align 4
  %19 = load i8*, i8** %7, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 4
  store i8* %20, i8** %7, align 8
  %21 = load i32, i32* %10, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %25, label %23

23:                                               ; preds = %4
  %24 = load i8*, i8** %7, align 8
  store i8* %24, i8** %5, align 8
  br label %31

25:                                               ; preds = %4
  %26 = load i32*, i32** %6, align 8
  %27 = load i8*, i8** %7, align 8
  %28 = load i32**, i32*** %9, align 8
  %29 = load i32, i32* %8, align 4
  %30 = call i8* @WdtpInterfacePointer_UserUnmarshal(i32* %26, i8* %27, i32** %28, i32 %29)
  store i8* %30, i8** %5, align 8
  br label %31

31:                                               ; preds = %25, %23
  %32 = load i8*, i8** %5, align 8
  ret i8* %32
}

declare dso_local i32 @TRACE(i8*, i32, i8*, i32**) #1

declare dso_local i8* @WdtpInterfacePointer_UserUnmarshal(i32*, i8*, i32**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
